all in another days work

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="assets/pasta.png" type="image/x-icon">
+
         <title>
             John Site
         </title>
         <style>
             @font-face { font-family: BDFI; src: url('assets/bdfi.otf'); } 
-
+            
             body {
                 background-image: url('assets/bg.png');
             }
